# ChangeLog for sys-process/cronie
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-process/cronie/ChangeLog,v 1.57 2014/09/07 15:27:13 jmorgan Exp $

  07 Sep 2014; Jack Morgan <jmorgan@gentoo.org> cronie-1.4.11-r3.ebuild:
  sparc, ppc, ppc64 stable

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> cronie-1.4.11-r1.ebuild,
  cronie-1.4.11-r3.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  05 Jul 2014; Mikle Kolyada <zlogene@gentoo.org> cronie-1.4.11-r3.ebuild:
  Add ~s390 keyword wrt bug #497394

*cronie-1.4.11-r3 (18 Apr 2014)

  18 Apr 2014; Lars Wendler <polynomial-c@gentoo.org> -cronie-1.4.11-r2.ebuild,
  +cronie-1.4.11-r3.ebuild, files/cronie-1.3-crontab:
  Only use anachron if /etc/cron.hourly/0anacron is executable.

*cronie-1.4.11-r2 (30 Mar 2014)

  30 Mar 2014; Lars Wendler <polynomial-c@gentoo.org> +cronie-1.4.11-r2.ebuild,
  +files/cronie-1.3-crontab:
  Attempt to fix installation of anacron as suggested by Matthew Schultz in bug
  #503666.

  26 Mar 2014; Christian Ruppert <idl0r@gentoo.org> cronie-1.4.11-r1.ebuild:
  Enable inotify by default

  04 Mar 2014; Lars Wendler <polynomial-c@gentoo.org> files/anacron-1.0-initd,
  files/cronie-1.3-initd:
  Fixed pidfile location for non-linux systems.

*cronie-1.4.11-r1 (25 Feb 2014)

  25 Feb 2014; Lars Wendler <polynomial-c@gentoo.org> -cronie-1.4.9-r5.ebuild,
  -cronie-1.4.11.ebuild, +cronie-1.4.11-r1.ebuild, files/anacron-1.0-initd,
  files/cronie-1.3-initd:
  Revbump to install anacrontab as well. Thanks to Matthew Schultz for
  reporting this in bug #502420 and providing an ebuild patch. Committed
  straight to stable. Fixed pidfile location in init scripts. Removed old.

  11 Jan 2014;  <zlogene@gentoo.org> cronie-1.4.11.ebuild:
  Add ~ppc64 keyword wrt bug #497394

  11 Jan 2014;  <zlogene@gentoo.org> cronie-1.4.11.ebuild:
  Add ~ppc keyword wrt bug #497394

  10 Jan 2014;  <zlogene@gentoo.org> cronie-1.4.11.ebuild: