@@ -1,0 +1,13 @@
+DEFINED_PHASES=configure install postinst setup
+DEPEND=pam? ( virtual/pam ) anacron? ( !sys-process/anacron ) >=sys-apps/sed-4.0.5 virtual/pkgconfig
+DESCRIPTION=Cronie is a standard UNIX daemon cron based on the original vixie-cron
+EAPI=5
+HOMEPAGE=https://fedorahosted.org/cronie/wiki
+IUSE=anacron +inotify pam selinux
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sparc ~x86
+LICENSE=ISC BSD BSD-2 GPL-2
+RDEPEND=pam? ( virtual/pam ) anacron? ( !sys-process/anacron ) >=sys-process/cronbase-0.3.2 !sys-process/vixie-cron !sys-process/bcron !sys-process/dcron !sys-process/fcron
+SLOT=0
+SRC_URI=https://fedorahosted.org/releases/c/r/cronie/cronie-1.4.12.tar.gz
+_eclasses_=cron	18adefe7a7b2f043ca5b63e912835970	eutils	32548a82e42dc26e3312581476d2f20c	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	pam	aa1ebb3ab720ea04dbbdd6eaaf9554ed	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	0f1760274637a138b99bb649202ea402	user	f54e098dd38ba1c0847a13e685b87747
+_md5_=b5751d6e8b4137efc313809aabdc97c9
