@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX anacron-1.0-initd 596 SHA256 7ff283ee8b492929d33831461b72e872fe9d3a98344cf39af442f575875b0132 SHA512 2d194102ec0925e1cb99969cac5f69028e1e94afdec590a4292c23c1b87185894c1bae8c2d220223f79fc4fde3d56030f900b764f474fca235c8cbf5adcc182a WHIRLPOOL 5afc6503ce81bb8a802d460b4eb6526a54f6844a7311c950318821c6838b0f5c5974b1d1c4d9f894af92704e25d8653eca1943ff94e4a33a32d1415b0f056124
 AUX cronie-1.2-cron.deny 216 SHA256 4a857b2c58bb10d4aefbdd7d4a41710456a8cc27774c365e361ca5271128e0b8 SHA512 88b4bf039d5677e9b63fffa5b40bcfb15bd5fe3e76db6ef8dabe2c7b2fe9f7c45ef8cc0fc2087457f5ec364bcc7dee7548df5b98f1c88cbf9df495b12a601a04 WHIRLPOOL 2f02d1db5b2650ca63345445010853016f1d397aa45c1031d0518fff3702e3eb3ed52b3835fa22f8a637a53b4de193ac74aa3ca190fa9739f161760d11398f44
 AUX cronie-1.2-crontab 605 SHA256 369665b00a9f278fb57e6c2e285d6335b38970474d27e7563b68a65aa1045d4b SHA512 12bab43416f76102441be8af99696778e4bd13c704dcda22f7bc4c4f388a2163470c37b1e7d981d49d057b7ece4a1fa8d4c2f4a168db216ecadbe0a570c46905 WHIRLPOOL 440d2d5ae1cf2ed3b2d8bd472927f6136bd6339b8f7e71896cba300b78dff63d9e3e3a55e56754708710e8307b847279761604aaa9c19fa26eb524c02bac2019
@@ -5,7 +8,26 @@ AUX cronie-1.3-crontab 833 SHA256 700714927dea9ed271924817863e9b45cb50b3dd650bd0
 AUX cronie-1.3-initd 395 SHA256 292a7b20fe33bd027357475fea6aa1194afa7e5c1c47a85299db945b9d1c847e SHA512 e52ddbf1a7235aff7756478f807e5c10cccf729d9cbd52294db767b958a5640f3645f3f5784618b55aca302808755707d3eca667637c1f93a233aa83365f567f WHIRLPOOL 112e78802d59aac029d33e3ec8cb833b29417a13ab6212393f15f09b42906d56d92501ac8bad972e3fb91d9255067795b32f4fd0589cedfd2f337572cc2576c5
 AUX cronie-1.4.3-pamd 231 SHA256 c281c9b8fb4984e20142a7e099d7032192d5c2ca2eb02ece5eb4f73ca64593dd SHA512 32268d8b097e60eb039c023647ecd651b6940a8fe1587111ce0d49314bbb2de451214f98b7b703fd284e231c10bc4e616d4d0c63c107d9cdbc2bb470a17f2c3a WHIRLPOOL 171dbaa3a49aec2731d1cd78a1a4168369a1a0596b98049fd9c026ab9af54e97fdcf81416fa4fe8201c232dcdf891c4d3e81da20ddfa103eae458094c2095424
 DIST cronie-1.4.11.tar.gz 222665 SHA256 fd08084cedddbb42499f80ddb7f2158195c3555c2ff40ee11d4ece2f9864d7be SHA512 acf998642266f812dfa5a00737f72ae2d36dfab9edddd3d99a9f6545415f7f6dc980d1401ec8a39b865cf54336853f190d3c542be3281dc368e0d5bc5c7f3e5f WHIRLPOOL 243e145b25928d4cdca22f3c85a6aa9a99e8dca239684debf4fd382bdc25945123054ac0b54e609d882550aae08eda7d8202ab29a7f122b5555b0807666edb19
+DIST cronie-1.4.12.tar.gz 234214 SHA256 0f5c9bf32f352599451c4ca0d6bc076d19e73ecfa5a90b34ecfe47c918c8bafd SHA512 ff17c9a1ba39957727db390d28d21248f05414f55119094d99a646695698e1b148b920f3fc91e9733b862bc8ce226824d290fff51abe17410a0e63ab3b424865 WHIRLPOOL 61a6a7c3a660bbbb38ff2b7b700fe6fa84b1144d20d658e26f4cde522f6fc3faa6141f4cb176f78cfb22cfb50e17f2a945aeb382761ba2aa1b25e6e16ad20082
 EBUILD cronie-1.4.11-r1.ebuild 2078 SHA256 811837bb2f2129c644a2dbe222e57b9342080f297f32917115ea36377ae6ad05 SHA512 f786deb1daa02068c9ebbe2377f7f69f151d9c39dfbdaf0c1cccc5ee506428a8a3efae5a3cad2bee76dcbc03314f1174eb2cf7c43915cabc2c727fae65c6a724 WHIRLPOOL 500a82a0e357ec4a6dedadb487b77508a443cfad7fa9dfb8f63942943b3b4f523c25cbea22c4a60bb984e2f1e37edff06e9ab5a99016221ef31c253d86bf6487
 EBUILD cronie-1.4.11-r3.ebuild 2022 SHA256 fa3a7d65eebed1c55c83940feb0850bc7b6cf606d12095f400df81fdeb1218d5 SHA512 08a3da61c64a97a80440e36b52b363650d508fc93c5136815ce7888584ebe1076fe4e833fbac948ca05aa7a29798745b7f93c4367abedfa59d11fa79b97fcebf WHIRLPOOL cf52decc671df129a9032ca5b66f21d4feb7ab0ff57e1719887bc4e8d0fb395570069ba0d75ad4aecd6828be73f30ce121e62e35471053a65f2f84d70b854ba1
-MISC ChangeLog 9177 SHA256 f13c403df3986c9e0bb4c3c93274b115ddedda2b78d9807a8cec0d9cd5107480 SHA512 d9b390eddde3e6a8526ef7fe8d39be0c5ccc7d9ad225c7228eeb97ae8ccbb92f4cb699431b5135c0e74608365d97e526aa4e773746a1173d239d5dc6a229cc89 WHIRLPOOL 1d4bb2da50efcbd292c2000636984c152d20f899fbd0342db806beeb96721177583d4118297391ff86fe8f823594cba17c3d598f1f92a56f5faa89409d70af58
+EBUILD cronie-1.4.12.ebuild 2027 SHA256 89028d39a81c25a04482217003d9d05fae238c0be6875475597f36b2da7225af SHA512 998994af5555a89c31ad0bb0e4994e1738a7a401017bddfbe2ad0466644a961962b648a1a59e215a38aea8f2e92533d7b101af0b440ddcc06e59183a64102499 WHIRLPOOL 8c58fe3c3a3d02f69da7e5b03eb3edc2a37dce4e58b95ab658b3cf630742d9a645f7a126dc1d82a930d757eb9bb7f477ca6ad4fc4a94d8da934678473f69954a
+MISC ChangeLog 9306 SHA256 75345e030340a10558185cb7eb77b63b8bdce5e3cff630f50247c3ddbb9d27ac SHA512 7736b7139f1f5b5507de49dcab8a541173cf8def79305eb8b4f4789ad6e3a736310eee3f32a0d2fa362c22bf79207efd792297171682006b32d4c56b2ee8e2b7 WHIRLPOOL 56f376ccb19072f452a103ee71bb3e21a95b30627137b1317a77d76ff0e474c2b1ddd79b4b33fdf7d735bf3c6aafd1e52b17d19556c4a73dd326313181a179fe
 MISC metadata.xml 799 SHA256 fe8f004016da48f9eaf570c4777bd407f210d468e8779d8db538b5fa1f0dad7d SHA512 9bae8c4edf33af2e6d25aa9db003d40525895dc21ca3388a303a7bba851a0bbe46ac0d254e0aa9c84da8f5c1d2b0e0042e1e317f717c1bd53fe388849366da82 WHIRLPOOL a9e7f4565bc909bc44dc4b676edc48794e8da7235a33b9289fcf53de65fb3406662560588d80fbed90873a9a56fcf00a0ec03fd80325ec2c8e56b9a38b66e01a
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQIcBAEBCAAGBQJUH6GNAAoJEPiazRVxLXTF7QEP/1HuSePLMr1mqk2uFebZHsUI
+q8mcLIT7B3PWxdNHuDoxCfKbn3jf53altGDftJS3Ffeoc+O/nEDzbyYmRTGAs0Fg
+1fDw68gudMvNHuh5a8AQINMPGkyDTTtjAekDSXrYKwZlfFliaUUOU2njUS6/QTA7
+jRGzfV7llVwp5QRRv4A48tq4DxlxCoP6OHb3d95NmkQwuw+XjmGTTc5S7SR/+Jin
+ltTUg+k+RaNZo3sG5+6kHMYcazlfPzSjlHhWhcqGXdysmh46drpffslcZKC1rab6
+uEmeU1hchFYb4MDcq4/aMQ6olrPX+z7RKw8dOh86S44gE4dlVRv3Z8J7151Xb9Rw
+s/LNeLRR4inNoNLCcN05dmukHgVFe3DF1XM/15WhUT8HgZB9xWnyQWwLHB3hZTgb
+PZJbZ81dLeAFnC2ELcxI0iRw4KQqfMQ2BlLR1/frH/WMzCn9Uv5wEb940AVF1S4O
+60AkfV4i76ZmzXrmtUeb8/DEAYMMduft1Bqw9qKpurPMx65dFyLqzqRrHS2eXUXH
+eLPzxRpcgLXeO9j00uCyU4gLdR2Rs7IQWInHkMtnXQGPe4FLGRz+H8bUztagJpIP
+qA1FUT4R59jPtBMcbuSX5yYotpr9SJyxAr9VLelJVGVYI2xf8eiTNqAkgLDQdXaP
+lMuewXO2TM0e8lhnMvlm
+=sRWb
+-----END PGP SIGNATURE-----
