@@ -1,6 +1,11 @@
 # ChangeLog for sys-process/cronie
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/cronie/ChangeLog,v 1.57 2014/09/07 15:27:13 jmorgan Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/cronie/ChangeLog,v 1.58 2014/09/22 04:11:56 polynomial-c Exp $
+
+*cronie-1.4.12 (22 Sep 2014)
+
+  22 Sep 2014; Lars Wendler <polynomial-c@gentoo.org> +cronie-1.4.12.ebuild:
+  Version bump.
 
   07 Sep 2014; Jack Morgan <jmorgan@gentoo.org> cronie-1.4.11-r3.ebuild:
   sparc, ppc, ppc64 stable
